--- a/client/src/components/HeroSection.css
+++ b/client/src/components/HeroSection.css
@@ -1,5 +1,5 @@
 .home__hero-section {
-    /* color: #fff; */
+    color: #fff;
     padding: 160px 0;
 }
 
@@ -42,3 +42,60 @@
     margin-bottom: 16px;
 
 }
+.heading {
+    margin-bottom: 24px;
+    font-size: 48px;
+    line-height: 1.1;
+    font-weight: 600;
+    color: #f7f8fa;
+}
+
+.dark {
+    color: #131414;
+}
+
+.darkBg {
+    background-color: #131414;
+}
+
+.home__hero-subtitle {
+    max-width: 440px;
+    margin-bottom: 35px;
+    font-size: 18px;
+    line-height: 24px;
+}
+
+.home__hero-img-wrapper {
+    max-width: 555px;
+}
+
+.home__hero-img {
+    max-width: 95%;
+    margin: 0 0 0 10px;
+    padding-right: 0;
+}
+
+img{
+    border: 0;
+    max-width: 100%;
+    vertical-align: middle;
+    display: inline-block;
+}
+
+@media screen and (max-width: 991px) {
+    .container {
+        padding-right: 30px;
+        padding-left: 30px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .home__hero-text-wrapper{
+        padding-bottom: 65px;
+    }
+    .col { 
+        max-width: 100%;
+        flex-basis: 100%;
+    }
+}
+
