--- a/client/src/components/pages/Footer/Footer.css
+++ b/client/src/components/pages/Footer/Footer.css
@@ -1,47 +1,10 @@
 .footer-container {
-    background-color: #1c2237;
+    background-color: #080808;
     padding: 4rem 0 2rem 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-  }
-  
-  .footer-subscription {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin-bottom: 24px;
-    padding: 24px;
-    color: #fff;
-  }
-  
-  .footer-subscription > p {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-      'Lucida Sans', Arial, sans-serif;
-  }
-  
-  .footer-subscription-heading {
-    margin-bottom: 24px;
-    font-size: 24px;
-  }
-  
-  .footer-subscription-text {
-    margin-bottom: 24px;
-    font-size: 20px;
-  }
-  
-  .footer-input {
-    padding: 8px 24px;
-    border-radius: 2px;
-    margin-right: 10px;
-    outline: none;
-    border: none;
-    font-size: 18px;
-    margin-bottom: 16px;
-    border: 1px solid #fff;
   }
   
   .footer-links {
@@ -84,13 +47,7 @@
     transition: 0.3s ease-out;
   }
   
-  .footer-email-form h2 {
-    margin-bottom: 2rem;
-  }
   
-  .footer-input::placeholder {
-    color: #b1b1b1;
-  }
   
   /* Social Icons */
   .social-icon-link {
@@ -125,7 +82,7 @@
     margin-left: 20px;
     cursor: pointer;
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 0.8rem;
     display: flex;
     align-items: center;
     margin-bottom: 16px;
