--- a/client/src/components/DogCards.css
+++ b/client/src/components/DogCards.css
@@ -1,22 +1,22 @@
 .dog__section {
-    padding: 100px 0 160px;
+    padding: 50px ;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: aqua;
+    background-color: rgb(109, 106, 106);
 }
 
 .dog__container-card {
-    background: linear-gradient(45deg, #0660e9 0%, #276afb 100%);
+    background: #242424;
     box-shadow: 0 6px rgba(56, 125, 255, 0.2);
-    width: 280px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
     text-decoration: none;
     border-radius: 4px;
 }
 
 .dog__container-card:nth-child(2) {
-    transform: scale(1.05);
+    
     background: #242424;
     margin: 0 24px;
 }
@@ -34,66 +34,34 @@
 }
 
 .dog__wrapper {
-    display: flex;
     flex-direction: column;
     align-items: start;
     margin: 0 auto;
 }
 
-.dog__heading {
-    color: #1c2237;
-    margin-bottom: 24px;
-}
+
 
 .dog__container-cardInfo {
     display: flex;
     flex-direction: column;
     height: 500px;
-    padding: 24px;
+    padding: 0px;
     align-items: center;
     color: #fff;
 }
 
 .dog__container-cardInfo h3 {
     margin-bottom: 5px;
-    font-size: 24px;
+    font-size: 30px;
 }
 
-.dog__container-cardInfo h4 {
-    font-size: 40px;
-}
-
-.dog__container-cardInfo p {
-    font-size: 14px;
-    margin-bottom: 24px;
-}
-
-.dog__container-features {
-    margin: 16px 0 32px;
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.dog__container-features li {
-    margin-bottom: 10px;
-}
-
-img {
-    scale: 50%;
-}
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 1050px) {
     .dog__container {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         justify-content: center;
         align-items: center;
         width: 100%;
-    }
-
-    .dog__container-card {
-        width: 90%;
     }
 
     .dog__wrapper {
@@ -103,8 +71,16 @@ img {
         align-items: center;
     }
 
+    .dog__container-card {
+        background: #242424;
+        box-shadow: 0 6px rgba(56, 125, 255, 0.2);
+        width: 300px;
+        height: 300px;
+        text-decoration: none;
+        border-radius: 4px;
+    }
+    
     .dog__container-card:nth-child(2) {
-        transform: scale(1);
         background: #242424;
         margin: 24px;
     }
@@ -112,5 +88,22 @@ img {
     .dog__container-card:hover {
         transform: none;
     }
+
+    .dog__container-cardInfo h3 {
+        margin-bottom: 5px;
+        font-size: 25px;
+    }
+    
+}
+@media screen and (max-width: 750px) {
+    .dog__container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+
+    
 }
 
