Homepage work, forced reset so may have issues

--- a/client/src/components/DogCards.css
+++ b/client/src/components/DogCards.css
@@ -39,7 +39,11 @@
     margin: 0 auto;
 }
 
-
+.dog__heading {
+    color: #fff;
+    margin-bottom: 24px;
+    text-align: center;
+  }
 
 .dog__container-cardInfo {
     display: flex;
