--- a/client/src/components/Button.css
+++ b/client/src/components/Button.css
@@ -65,6 +65,12 @@
     transition: all 0.2s ease-out;
 }
 
+.purple {
+    background-color: #a709f0;
+    color: #fff;
+    border: none;
+}
+
 .blue {
     background-color: #276afb;
     color: #fff;
