--- a/client/src/components/pages/Footer/Footer.css
+++ b/client/src/components/pages/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer-container {
     background-color: #080808;
-    padding: 4rem 0 2rem 0;
+    padding: 3rem 0 2rem 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -24,7 +24,7 @@
     align-items: flex-start;
     margin: 16px;
     text-align: left;
-    width: 160px;
+    width: 180px;
     box-sizing: border-box;
   }
   
@@ -43,7 +43,7 @@
   }
   
   .footer-link-items a:hover {
-    color: #e9e9e9;
+    color: #a709f0;
     transition: 0.3s ease-out;
   }
   
